# dogstatsd-rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  aliases.js  docker-compose.yml  index.html  search-index.js  settings.html  source-files.js
.github/workflows/: ci.yml
chrono/: enum.Weekday.html  index.html  struct.Date.html  struct.DateTime.html  struct.ParseWeekdayError.html  trait.Datelike.html  trait.Timelike.html
chrono/format/: enum.Fixed.html  enum.Item.html  enum.Numeric.html  enum.Pad.html  fn.format.html  index.html  struct.DelayedFormat.html  struct.InternalFixed.html  struct.InternalNumeric.html  struct.ParseError.html  type.ParseResult.html
chrono/naive/: index.html  struct.NaiveDate.html  struct.NaiveDateTime.html  struct.NaiveTime.html
chrono/offset/: index.html  struct.Local.html  struct.Utc.html  trait.Offset.html  trait.TimeZone.html
chrono/prelude/: index.html
dogstatsd/: all.html  enum.DogstatsdError.html  enum.ServiceStatus.html  index.html  sidebar-items.js  struct.Client.html  struct.Options.html  struct.ServiceCheckOptions.html  type.DogstatsdResult.html
dogstatsd/error/: enum.DogstatsdError.html
dogstatsd/metrics/: enum.ServiceStatus.html  struct.ServiceCheckOptions.html
implementors/core/clone/: trait.Clone.js
num_integer/: struct.ExtendedGcd.html  struct.IterBinomial.html
num_traits/: enum.FloatErrorKind.html  struct.ParseFloatError.html
src/: error.rs  lib.rs  metrics.rs
src/chrono/: date.rs.html  datetime.rs.html  div.rs.html  lib.rs.html  round.rs.html
src/client/: common.rs  mod.rs  sync.rs  tokio.rs
src/dogstatsd/: error.rs.html  lib.rs.html  metrics.rs.html
tests/: integration_test.rs  support.rs
(+35 files in other folders)
