[package]
name = "dogstatsd"
version = "0.7.0"
authors = ["Matt Casper <matthewvcasper@gmail.com>"]
license = "MIT"
description = "A DogstatsD client for Rust."
documentation = "https://mcasper.github.io/dogstatsd-rs/dogstatsd/"
repository = "https://github.com/mcasper/dogstatsd-rs"
keywords = ["datadog", "dogstatsd", "client"]

[dependencies]
chrono = { version = "0.4", optional = true, default-features = false, features = ["clock"] }

[features]
unstable = []
