[package]
name = "dogstatsd"
version = "0.9.0"
authors = ["Matt Casper <matthewvcasper@gmail.com>"]
license = "MIT"
description = "A DogstatsD client for Rust."
documentation = "https://mcasper.github.io/dogstatsd-rs/dogstatsd/"
edition = "2021"
repository = "https://github.com/mcasper/dogstatsd-rs"
keywords = ["datadog", "dogstatsd", "client"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rand = { version = "0.8.5", default-features = false, features = ["std", "std_rng"] }

[features]
unstable = []
