[package]
name = "dogstatsd"
version = "0.11.0"
authors = ["Matt Casper <matthewvcasper@gmail.com>"]
license = "MIT"
description = "A DogstatsD client for Rust."
documentation = "https://mcasper.github.io/dogstatsd-rs/dogstatsd/"
edition = "2021"
repository = "https://github.com/mcasper/dogstatsd-rs"
keywords = ["datadog", "dogstatsd", "client"]

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock"] }
retry = "2.0.0"

[dev-dependencies]
tokio = { version = "1.32", features = ["full"] }

[features]
unstable = []
